--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,4 @@
 RewriteEngine On
-
-RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-f 
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
-
+RewriteRule . ./index.php [L]
